--- a/02-blackjack/index.html
+++ b/02-blackjack/index.html
@@ -16,11 +16,11 @@
     </header>
 
     <div class="row mt-2">
-        <div class="col text-center">
+        <div id="divBotones" class="col text-center">
 
-            <button class="btn btn-danger">Nuevo Juego</button>
-            <button class="btn btn-primary">Pedir carta</button>
-            <button class="btn btn-primary">Detener</button>
+            <button id="btnNuevo" class="btn btn-danger">Nuevo Juego</button>
+            <button id="btnPedir" class="btn btn-primary">Pedir carta</button>
+            <button id="btnDetener" class="btn btn-primary">Detener</button>
 
         </div>
     </div>
@@ -30,10 +30,7 @@
 
             <h1>Jugador 1 - <small>0</small> </h1>
             <div id="jugador-cartas">
-                <img class="carta" src="assets/cartas/AC.png"">
-                <img class="carta" src="assets/cartas/AC.png"">
-                <img class="carta" src="assets/cartas/AC.png"">
-                 <img class="carta" src="assets/cartas/AC.png"">
+                <!-- <img class="carta" src="assets/cartas/AC.png""> -->
             </div>
 
         </div>
@@ -44,9 +41,6 @@
 
             <h1>Computadora - <small>0</small> </h1>
             <div id="computadora-cartas">
-                <img class="carta" src="assets/cartas/2H.png"">
-                <img class="carta" src="assets/cartas/2H.png"">
-                <img class="carta" src="assets/cartas/2H.png"">
                 <img class="carta" src="assets/cartas/2H.png"">
             </div>
 
