--- a/02-blackjack/index.html
+++ b/02-blackjack/index.html
@@ -41,7 +41,7 @@
 
             <h1>Computadora - <small>0</small> </h1>
             <div id="computadora-cartas">
-                <img class="carta" src="assets/cartas/2H.png"">
+                <!-- <img class="carta" src="assets/cartas/2H.png""> -->
             </div>
 
         </div>
